k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surecore-web
spec:
  selector:
    app: surecore-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
