k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surecore-web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ENV_HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: surecore-web
            port:
              number: 80
